@@ -42,8 +42,15 @@
 #include "lib_internal.h"
 
 /****************************************************************************
- * Definitions
+ * Pre-processor Definitions
  ****************************************************************************/
+
+/* Some output destinations are only available from within the kernel */
+
+#if defined(CONFIG_NUTTX_KERNEL) && !defined(__KERNEL__)
+#  undef CONFIG_SYSLOG
+#  undef CONFIG_ARCH_LOWPUTC
+#endif
 
 /****************************************************************************
  * Private Type Declarations
